// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[COMPONENTS]: Toggle renders correctly 1`] = `
<View
  accessibilityRole="togglebutton"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 16,
          "borderWidth": 0,
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 0,
          "justifyContent": "space-between",
          "overflow": "hidden",
        },
        {
          "backgroundColor": undefined,
          "height": 32,
          "width": 57.6,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderColor": undefined,
            "height": "100%",
            "overflow": "hidden",
            "paddingEnd": 4,
            "paddingStart": 4,
            "position": "absolute",
            "width": "100%",
          },
          {
            "backgroundColor": undefined,
          },
          {
            "opacity": 0,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 12,
            "height": 26,
            "position": "absolute",
            "width": 26,
          },
          {
            "marginStart": 4,
            "start": "0%",
          },
          {
            "height": 25.6,
            "width": 25.6,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`[COMPONENTS]: Toggle renders correctly with active state 1`] = `
<View
  accessibilityRole="togglebutton"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 16,
          "borderWidth": 0,
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 0,
          "justifyContent": "space-between",
          "overflow": "hidden",
        },
        {
          "backgroundColor": undefined,
          "height": 32,
          "width": 57.6,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderColor": undefined,
            "height": "100%",
            "overflow": "hidden",
            "paddingEnd": 4,
            "paddingStart": 4,
            "position": "absolute",
            "width": "100%",
          },
          {
            "backgroundColor": undefined,
          },
          {
            "opacity": 1,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 12,
            "height": 26,
            "position": "absolute",
            "width": 26,
          },
          {
            "marginStart": -29.6,
            "start": "100%",
          },
          {
            "height": 25.6,
            "width": 25.6,
          },
        ]
      }
    />
  </View>
</View>
`;
